# mtm_1

./: CMakeLists.txt  Makefile  README.md  candidate.c  candidate.h  citizen.c  citizen.h  citizenDebug.c  city.c  city.h  cityDebug.c  exampleMain.c  expected_example_out  mtmElections.c  mtm_elections.h  mtm_print.c  mtm_print.h  preference.c  preference.h  preferenceDebug.c
uniqueOrderedList/: uniqueOrderedList.c  uniqueOrderedList.h  uniqueOrderedListExample.c
